--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -77,7 +77,5 @@ jobs:
 
       - name: Push changes
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PAT_TOKEN }}
-          branch: ${{ github.ref }}
+        run: |
+          git push
