--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -6,10 +6,10 @@ on:
       - main
       - develop
     paths:
-      - 'car-rental-protos/proto/**/*.proto'
+      - 'proto/**/*.proto'
   pull_request:
     paths:
-      - 'car-rental-protos/proto/**/*.proto'
+      - 'proto/**/*.proto'
   workflow_dispatch:
 
 jobs:
@@ -40,25 +40,22 @@ jobs:
 
       - name: Create gen directory structure
         run: |
-          mkdir -p car-rental-protos/gen
+          mkdir -p gen
 
       - name: Generate Go protobuf files
         run: |
-          # Find all .proto files and generate code
-          find car-rental-protos/proto -name "*.proto" | while read proto_file; do
+          find proto -name "*.proto" | while read proto_file; do
             # Get the relative path from proto directory
-            rel_path=${proto_file#car-rental-protos/proto/}
+            rel_path=${proto_file#proto/}
             dir_path=$(dirname "$rel_path")
           
-            # Create corresponding directory in gen
-            mkdir -p "car-rental-protos/gen/$dir_path"
+            mkdir -p "gen/$dir_path"
           
-            # Generate Go protobuf files
             protoc \
-              --proto_path=car-rental-protos/proto \
-              --go_out=car-rental-protos/gen \
+              --proto_path=proto \
+              --go_out=gen \
               --go_opt=paths=source_relative \
-              --go-grpc_out=car-rental-protos/gen \
+              --go-grpc_out=gen \
               --go-grpc_opt=paths=source_relative \
               "$proto_file"
           done
@@ -71,7 +68,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add car-rental-protos/gen/
+          git add gen/
           git add go.mod
           
           # Show what files are staged
