--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -69,7 +69,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add gen/
-          git add go.mod
+          git add go.mod go.sum
           
           echo "Files to be committed:"
           git diff --staged --name-only
